Troca de imagem e adicao de habilidades incompleta

--- a/index.html
+++ b/index.html
@@ -18,13 +18,56 @@
     </nav>
     <div class="apresentacao">
         <div>
-            <img id="imagemMinha" src="./assets/foto boa pro forfólio.png" alt="Foto minha">
+            <!-- <img id="imagemMinha" src="./assets/foto boa pro forfólio.png" alt="Foto minha"> -->
+            <img id="imagemMinha" src="./assets/eu com cor retortado so cabeca.png" alt="Foto minha">
         </div>
-        <div>
+        <div class="escritoApresentacao">
             <h1>Gabriel Plautz Eugenio</h1>
             <h4>19 anos - Análise e Desenvolvimento da PUC</h4>
-            <p id="descricao">Desenvolvedor Júnior há 1 ano. Procuro minha primeira oportunidade de emprego. Minhas habilidades foram desenvolvidas principalmente em cursos, bootcamps e em projetos pessoais no meu GitHub. Habilidades como HTML, CSS, JavaScript, ReactJs, PostgreSQL, NodeJs, SQL, Java, JUnit e SpringBoot.
-                <br> Meus principais projetos e portfólio estão no meu <a href="https://github.com/Xacarami" target="_blank">GitHub: https://github.com/Xacarami</a></p>
+            <p id="descricao">Desenvolvedor Júnior há 1 ano. Procuro minha primeira oportunidade de emprego.
+                <!-- Minhas habilidades foram desenvolvidas principalmente em cursos, bootcamps e em projetos pessoais no meu GitHub. Habilidades como HTML, CSS, JavaScript, ReactJs, PostgreSQL, NodeJs, SQL, Java, JUnit e SpringBoot. -->
+                <br> Meus principais projetos e portfólio estão no meu <a href="https://github.com/Xacarami" target="_blank">GitHub: https://github.com/Xacarami</a>
+                <br>Como um bootcamp é um conjunto de cursos, projetos e desafios de códigos, para melhor detalhamento do que aprendi poderá ser encontrado no meu <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">LinkedIn</a> na área de "Licenças e Certificados": <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">https://linkedin.com/in/gabriel-plautz</a>
+            </p>
+        </div>
+    </div>
+
+    <hr>
+    <div class="habilidade">
+        <div class="tituloSubtituloHabilidade">
+            <h1>Habilidades adquiridas</h1>
+            <p>Habilidades e tecnologias aprendidas em bootcamps, cursos, desafios de código e projetos.</p>
+        </div>
+
+        <div class="iconesHabilidades">
+            <div class="html">
+                <img src="./assets/html.png" alt="HTML">
+                <h2>HTML</h2>
+            </div>
+            <div class="css">
+                <img src="./assets/css.png" alt="css">
+                <h2>CSS</h2>
+            </div>
+            <div class="javascript">
+                <img src="./assets/javascript.png" alt="javascript">
+                <h2>JavaScript</h2>
+            </div>
+            <div class="react">
+                <img src="./assets/react.png" alt="react">
+                <h2>React</h2>
+            </div>
+            <div class="nodejs">
+                <img src="./assets/nodejs.png" alt="nodejs">
+                <h2>NodeJS</h2>
+            </div>
+            <div class="postgresql">
+                <img src="./assets/postgresql.png" alt="postgresql">
+                <h2>PostgreSQL</h2>
+            </div>
+            <div class="sql">
+                <img src="./assets/sql.png" alt="sql">
+                <h2>SQL</h2>
+            </div>
         </div>
     </div>
 
