--- a/index.html
+++ b/index.html
@@ -16,19 +16,38 @@
         <a href="#">Habilidade</a>
         <a href="#">Projetos</a>
     </nav>
-    <div class="apresentacao">
-        <div>
-            <!-- <img id="imagemMinha" src="./assets/foto boa pro forfólio.png" alt="Foto minha"> -->
-            <img id="imagemMinha" src="./assets/eu com cor retortado so cabeca.png" alt="Foto minha">
+    <div class="comeco">
+        <div class="apresentacao">
+            <div>
+                <!-- <img id="imagemMinha" src="./assets/foto boa pro forfólio.png" alt="Foto minha"> -->
+                <!-- <img id="imagemMinha" src="./assets/eu com cor retortado so cabeca.png" alt="Foto minha"> -->
+                <img id="imagemMinha" src="./assets/eu2.jpg" alt="Foto minha">
+            </div>
+            <div class="escritoApresentacao">
+                <h1>Gabriel Plautz Eugenio</h1>
+                <h4>Desenvolvedor Front-end Júnior</h4>
+                <p id="descricao">
+                    <!-- Desenvolvedor Júnior há 1 ano. Procuro minha primeira oportunidade de emprego.
+                    Minhas habilidades foram desenvolvidas principalmente em cursos, bootcamps e em projetos pessoais no meu GitHub. Habilidades como HTML, CSS, JavaScript, ReactJs, PostgreSQL, NodeJs, SQL, Java, JUnit e SpringBoot.
+                    <br> Meus principais projetos e portfólio estão no meu <a href="https://github.com/Xacarami" target="_blank">GitHub: https://github.com/Xacarami</a>
+                    <br>Como um bootcamp é um conjunto de cursos, projetos e desafios de códigos, para melhor detalhamento do que aprendi poderá ser encontrado no meu <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">LinkedIn</a> na área de "Licenças e Certificados": <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">https://linkedin.com/in/gabriel-plautz</a> -->
+                    Desenvolvo projetos, principalmente em JavaScript e ReactJs. Meus conhecimentos são geralmente adquiridos em Bootcamps, cursos, projetos pessoais e apps de ensino focado em linguagens. Gosto de tecnologia e lógica, o que me fez ir atrás de conhecimento por mim mesmo, me tornando uma pessoa autodidata. Atualmente estou aprimorando meus conhecimentos em PHP, UX-UI, Linux e Laravel. Gosto também de jogos, filmes, séries, e desafios de lógica.
+                </p>
+            </div>
         </div>
-        <div class="escritoApresentacao">
-            <h1>Gabriel Plautz Eugenio</h1>
-            <h4>19 anos - Análise e Desenvolvimento da PUC</h4>
-            <p id="descricao">Desenvolvedor Júnior há 1 ano. Procuro minha primeira oportunidade de emprego.
-                <!-- Minhas habilidades foram desenvolvidas principalmente em cursos, bootcamps e em projetos pessoais no meu GitHub. Habilidades como HTML, CSS, JavaScript, ReactJs, PostgreSQL, NodeJs, SQL, Java, JUnit e SpringBoot. -->
-                <br> Meus principais projetos e portfólio estão no meu <a href="https://github.com/Xacarami" target="_blank">GitHub: https://github.com/Xacarami</a>
-                <br>Como um bootcamp é um conjunto de cursos, projetos e desafios de códigos, para melhor detalhamento do que aprendi poderá ser encontrado no meu <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">LinkedIn</a> na área de "Licenças e Certificados": <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">https://linkedin.com/in/gabriel-plautz</a>
-            </p>
+        <div class="linksExternos">
+            <div class="github">
+                <a href="https://github.com/Xacarami" target="_blank">
+                    <img src="./assets/github.png" alt="GitHub">
+                    <h3>GitHub</h3>
+                </a>
+            </div>
+            <div class="linkedin">
+                <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">
+                    <img src="./assets/linkedin.png" alt="LinkedIn">
+                    <h3>LinkedIn</h3>
+                </a>
+            </div>
         </div>
     </div>
 
@@ -39,35 +58,55 @@
             <p>Habilidades e tecnologias aprendidas em bootcamps, cursos, desafios de código e projetos.</p>
         </div>
 
-        <div class="iconesHabilidades">
-            <div class="html">
-                <img src="./assets/html.png" alt="HTML">
-                <h2>HTML</h2>
+        <div class="campoHabilidade">
+            <div class="iconesHabilidades">
+                <button id="html">
+                    <img src="./assets/html.png" alt="HTML">
+                    <h2>HTML</h2>
+                </button>
+                <button id="css">
+                    <img src="./assets/css.png" alt="css">
+                    <h2>CSS</h2>
+                </button>
+                <button id="javascript">
+                    <img src="./assets/javascript.png" alt="javascript">
+                    <h2>JavaScript</h2>
+                </button>
+                <button id="react">
+                    <img src="./assets/react.png" alt="react">
+                    <h2>React</h2>
+                </button>
+                <button id="nodejs">
+                    <img src="./assets/nodejs.png" alt="nodejs">
+                    <h2>NodeJS</h2>
+                </button>
+                <button id="postgresql">
+                    <img src="./assets/postgresql.png" alt="postgresql">
+                    <h2>PostgreSQL</h2>
+                </button>
+                <button id="sql">
+                    <img src="./assets/sql.png" alt="sql">
+                    <h2>SQL</h2>
+                </button>
             </div>
-            <div class="css">
-                <img src="./assets/css.png" alt="css">
-                <h2>CSS</h2>
+            <div class="descricaoHabilidade">
+                <div class="infoHabilidade">
+                    <h3 id="tituloHabilidade">XXXXXXXXXX</h3>
+                    <hr>
+                    <p id="descricaoHabilidadeEscrito">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+                </div>
             </div>
-            <div class="javascript">
-                <img src="./assets/javascript.png" alt="javascript">
-                <h2>JavaScript</h2>
-            </div>
-            <div class="react">
-                <img src="./assets/react.png" alt="react">
-                <h2>React</h2>
-            </div>
-            <div class="nodejs">
-                <img src="./assets/nodejs.png" alt="nodejs">
-                <h2>NodeJS</h2>
-            </div>
-            <div class="postgresql">
-                <img src="./assets/postgresql.png" alt="postgresql">
-                <h2>PostgreSQL</h2>
-            </div>
-            <div class="sql">
-                <img src="./assets/sql.png" alt="sql">
-                <h2>SQL</h2>
-            </div>
+        </div>
+    </div>
+
+    <hr>
+
+    <div>
+        <div>
+            <h1 id="tituloProjetos">Projetos</h1>
+        </div>
+        <div class="campoProjetos">
+
         </div>
     </div>
 
