inicio animado estilo vaporwave com montanhas scroll

--- a/index.html
+++ b/index.html
@@ -10,40 +10,45 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 </head>
 <body>
-    <button id="themeButton">Dark Mode</button>
-    <nav class="navegacao">
-        <a href="#">Home</a>
-        <a href="#">Habilidade</a>
-        <a href="#">Projetos</a>
-    </nav>
-    <div class="comeco">
-        <div class="apresentacao">
-            <div>
-                <!-- <img id="imagemMinha" src="./assets/foto boa pro forfólio.png" alt="Foto minha"> -->
-                <!-- <img id="imagemMinha" src="./assets/eu com cor retortado so cabeca.png" alt="Foto minha"> -->
-                <img id="imagemMinha" src="./assets/eu2.jpg" alt="Foto minha">
-            </div>
-            <div class="escritoApresentacao">
-                <h1>Gabriel Plautz Eugenio</h1>
-                <h4>Desenvolvedor Front-end Júnior</h4>
-                <p id="descricao">
-                    <!-- Desenvolvedor Júnior há 1 ano. Procuro minha primeira oportunidade de emprego.
-                    Minhas habilidades foram desenvolvidas principalmente em cursos, bootcamps e em projetos pessoais no meu GitHub. Habilidades como HTML, CSS, JavaScript, ReactJs, PostgreSQL, NodeJs, SQL, Java, JUnit e SpringBoot.
-                    <br> Meus principais projetos e portfólio estão no meu <a href="https://github.com/Xacarami" target="_blank">GitHub: https://github.com/Xacarami</a>
-                    <br>Como um bootcamp é um conjunto de cursos, projetos e desafios de códigos, para melhor detalhamento do que aprendi poderá ser encontrado no meu <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">LinkedIn</a> na área de "Licenças e Certificados": <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">https://linkedin.com/in/gabriel-plautz</a> -->
-                    Desenvolvo projetos, principalmente em JavaScript e ReactJs. Meus conhecimentos são geralmente adquiridos em Bootcamps, cursos, projetos pessoais e apps de ensino focado em linguagens. Gosto de tecnologia e lógica, o que me fez ir atrás de conhecimento por mim mesmo, me tornando uma pessoa autodidata. Atualmente estou aprimorando meus conhecimentos em PHP, UX-UI, Linux e Laravel. Gosto também de jogos, filmes, séries, e desafios de lógica.
-                </p>
-            </div>
+    <div class="inicioImagem">
+        <!-- <img src="./assets/carl-hodgson-vaporwaave-beder-project-2.jpg" alt="" id="imagemVaporwave"> -->
+        <!-- <img src="./assets/gif vaporwave.gif" alt="" id="imagemVaporwave"> -->
+        <img src="./assets/gif vaporwave2.gif" alt="" id="imagemVaporwave">
+        <img src="./assets/SeekPng.com_polygon-png_1220503.png" alt="" id="montanha1">
+        <img src="./assets/SeekPng.com_polygon-png_1220503.png" alt="" id="montanha2">
+        <button id="themeButton">Dark Mode</button>
+        <div class="topo">
+            <nav class="navegacao">
+                <a href="#">Home</a>
+                <a href="#">Habilidade</a>
+                <a href="#">Projetos</a>
+            </nav>
         </div>
-        <div class="linksExternos">
-            <div class="github">
-                <a href="https://github.com/Xacarami" target="_blank">
+        <div class="comeco">
+            <div class="apresentacao">
+                <div>
+                    <!-- <img id="imagemMinha" src="./assets/foto boa pro forfólio.png" alt="Foto minha"> -->
+                    <!-- <img id="imagemMinha" src="./assets/eu com cor retortado so cabeca.png" alt="Foto minha"> -->
+                    <img id="imagemMinha" src="./assets/eu2.jpg" alt="Foto minha">
+                </div>
+                <div class="escritoApresentacao">
+                    <h1>Gabriel Plautz Eugenio</h1>
+                    <h4>Desenvolvedor Front-end Júnior</h4>
+                    <p id="descricao">
+                        <!-- Desenvolvedor Júnior há 1 ano. Procuro minha primeira oportunidade de emprego.
+                        Minhas habilidades foram desenvolvidas principalmente em cursos, bootcamps e em projetos pessoais no meu GitHub. Habilidades como HTML, CSS, JavaScript, ReactJs, PostgreSQL, NodeJs, SQL, Java, JUnit e SpringBoot.
+                        <br> Meus principais projetos e portfólio estão no meu <a href="https://github.com/Xacarami" target="_blank">GitHub: https://github.com/Xacarami</a>
+                        <br>Como um bootcamp é um conjunto de cursos, projetos e desafios de códigos, para melhor detalhamento do que aprendi poderá ser encontrado no meu <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">LinkedIn</a> na área de "Licenças e Certificados": <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">https://linkedin.com/in/gabriel-plautz</a> -->
+                        Desenvolvo projetos, principalmente em JavaScript e ReactJs. Meus conhecimentos são geralmente adquiridos em Bootcamps, cursos, projetos pessoais e apps de ensino focado em linguagens. Gosto de tecnologia e lógica, o que me fez ir atrás de conhecimento por mim mesmo, me tornando uma pessoa autodidata. Atualmente estou aprimorando meus conhecimentos em PHP, UX-UI, Linux e Laravel. Gosto também de jogos, filmes, séries, e desafios de lógica.
+                    </p>
+                </div>
+            </div>
+            <div class="linksExternos">
+                <a class="github"  href="https://github.com/Xacarami" target="_blank">
                     <img src="./assets/github.png" alt="GitHub">
                     <h3>GitHub</h3>
                 </a>
-            </div>
-            <div class="linkedin">
-                <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">
+                <a class="linkedin" href="https://linkedin.com/in/gabriel-plautz" target="_blank">
                     <img src="./assets/linkedin.png" alt="LinkedIn">
                     <h3>LinkedIn</h3>
                 </a>
@@ -52,6 +57,7 @@
     </div>
 
     <hr>
+    
     <div class="habilidade">
         <div class="tituloSubtituloHabilidade">
             <h1>Habilidades adquiridas</h1>
