--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,58 +8,73 @@
     <title>Document</title>
     <link rel="stylesheet" href="style/dark.css" id="linkCss">
     <link rel="stylesheet" href="style/allStyles.css">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
+    <link rel="stylesheet" type="text/css"
+        href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 </head>
+
 <body>
-    <div class="inicioImagem">
-        <!-- <img src="./assets/carl-hodgson-vaporwaave-beder-project-2.jpg" alt="" id="imagemVaporwave"> -->
-        <!-- <img src="./assets/gif vaporwave.gif" alt="" id="imagemVaporwave"> -->
-        <img src="./assets/gif vaporwave2.gif" alt="" id="imagemVaporwave">
-        <img src="./assets/SeekPng.com_polygon-png_1220503.png" alt="" id="montanha1">
-        <img src="./assets/SeekPng.com_polygon-png_1220503.png" alt="" id="montanha2">
-        <button id="themeButton">Dark Mode</button>
+    <div class="inicioImagem" id="home">
+        <div class="imagemDeFundo">
+            <img src="./assets/carl-hodgson-vaporwaave-beder-project-2.jpg" alt="" id="imagemVaporwave">
+            <!-- <img src="./assets/gif vaporwave.gif" alt="" id="imagemVaporwave"> -->
+            <!-- <img src="./assets/gif vaporwave2.gif" alt="" id="imagemVaporwave"> -->
+            <div class="montanhas">
+                <img src="./assets/SeekPng.com_polygon-png_1220503.png" alt="" id="montanha1">
+                <img src="./assets/SeekPng.com_polygon-png_1220503.png" alt="" id="montanha2">
+
+            </div>
+        </div>
         <div class="topo">
             <nav class="navegacao">
-                <a href="#">Home</a>
-                <a href="#">Habilidade</a>
-                <a href="#">Projetos</a>
+                <a href="#home">Home</a>
+                <a href="#habilidades">Habilidade</a>
+                <a href="#projetos">Projetos</a>
             </nav>
+            <button id="themeButton">Dark Mode</button>
         </div>
-        <div class="comeco">
-            <div class="apresentacao">
-                <div>
-                    <!-- <img id="imagemMinha" src="./assets/foto boa pro forfólio.png" alt="Foto minha"> -->
-                    <!-- <img id="imagemMinha" src="./assets/eu com cor retortado so cabeca.png" alt="Foto minha"> -->
-                    <img id="imagemMinha" src="./assets/eu2.jpg" alt="Foto minha">
+        <div class="desfoco">
+            <div class="comeco">
+                <div class="apresentacao">
+                    <div>
+                        <!-- <img id="imagemMinha" src="./assets/foto boa pro forfólio.png" alt="Foto minha"> -->
+                        <!-- <img id="imagemMinha" src="./assets/eu com cor retortado so cabeca.png" alt="Foto minha"> -->
+                        <img id="imagemMinha" src="./assets/eu2.jpg" alt="Foto minha">
+                    </div>
+                    <div class="escritoApresentacao">
+                        <h1>Gabriel Plautz Eugenio</h1>
+                        <h4>Desenvolvedor Front-end Júnior</h4>
+                        <p id="descricao">
+                            <!-- Desenvolvedor Júnior há 1 ano. Procuro minha primeira oportunidade de emprego.
+                            Minhas habilidades foram desenvolvidas principalmente em cursos, bootcamps e em projetos pessoais no meu GitHub. Habilidades como HTML, CSS, JavaScript, ReactJs, PostgreSQL, NodeJs, SQL, Java, JUnit e SpringBoot.
+                            <br> Meus principais projetos e portfólio estão no meu <a href="https://github.com/Xacarami" target="_blank">GitHub: https://github.com/Xacarami</a>
+                            <br>Como um bootcamp é um conjunto de cursos, projetos e desafios de códigos, para melhor detalhamento do que aprendi poderá ser encontrado no meu <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">LinkedIn</a> na área de "Licenças e Certificados": <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">https://linkedin.com/in/gabriel-plautz</a> -->
+                            Desenvolvo projetos, principalmente em JavaScript e ReactJs. Meus conhecimentos são
+                            geralmente
+                            adquiridos em Bootcamps, cursos, projetos pessoais e apps de ensino focado em linguagens.
+                            Gosto
+                            de tecnologia e lógica, o que me fez ir atrás de conhecimento por mim mesmo, me tornando uma
+                            pessoa autodidata. Atualmente estou aprimorando meus conhecimentos em PHP, UX-UI, Linux e
+                            Laravel. Gosto também de jogos, filmes, séries, e desafios de lógica.
+                        </p>
+                    </div>
                 </div>
-                <div class="escritoApresentacao">
-                    <h1>Gabriel Plautz Eugenio</h1>
-                    <h4>Desenvolvedor Front-end Júnior</h4>
-                    <p id="descricao">
-                        <!-- Desenvolvedor Júnior há 1 ano. Procuro minha primeira oportunidade de emprego.
-                        Minhas habilidades foram desenvolvidas principalmente em cursos, bootcamps e em projetos pessoais no meu GitHub. Habilidades como HTML, CSS, JavaScript, ReactJs, PostgreSQL, NodeJs, SQL, Java, JUnit e SpringBoot.
-                        <br> Meus principais projetos e portfólio estão no meu <a href="https://github.com/Xacarami" target="_blank">GitHub: https://github.com/Xacarami</a>
-                        <br>Como um bootcamp é um conjunto de cursos, projetos e desafios de códigos, para melhor detalhamento do que aprendi poderá ser encontrado no meu <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">LinkedIn</a> na área de "Licenças e Certificados": <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">https://linkedin.com/in/gabriel-plautz</a> -->
-                        Desenvolvo projetos, principalmente em JavaScript e ReactJs. Meus conhecimentos são geralmente adquiridos em Bootcamps, cursos, projetos pessoais e apps de ensino focado em linguagens. Gosto de tecnologia e lógica, o que me fez ir atrás de conhecimento por mim mesmo, me tornando uma pessoa autodidata. Atualmente estou aprimorando meus conhecimentos em PHP, UX-UI, Linux e Laravel. Gosto também de jogos, filmes, séries, e desafios de lógica.
-                    </p>
+                <div class="linksExternos">
+                    <a class="github" href="https://github.com/Xacarami" target="_blank">
+                        <img src="./assets/github.png" id="github" alt="GitHub">
+                        <h3>GitHub</h3>
+                    </a>
+                    <a class="linkedin" href="https://linkedin.com/in/gabriel-plautz" target="_blank">
+                        <img src="./assets/linkedin.png" alt="LinkedIn">
+                        <h3>LinkedIn</h3>
+                    </a>
                 </div>
-            </div>
-            <div class="linksExternos">
-                <a class="github"  href="https://github.com/Xacarami" target="_blank">
-                    <img src="./assets/github.png" alt="GitHub">
-                    <h3>GitHub</h3>
-                </a>
-                <a class="linkedin" href="https://linkedin.com/in/gabriel-plautz" target="_blank">
-                    <img src="./assets/linkedin.png" alt="LinkedIn">
-                    <h3>LinkedIn</h3>
-                </a>
             </div>
         </div>
     </div>
 
     <hr>
-    
-    <div class="habilidade">
+
+    <div class="habilidade" id="habilidades">
         <div class="tituloSubtituloHabilidade">
             <h1>Habilidades adquiridas</h1>
             <p>Habilidades e tecnologias aprendidas em bootcamps, cursos, desafios de código e projetos.</p>
@@ -107,7 +123,7 @@
 
     <hr>
 
-    <div>
+    <div class="projetos" id="projetos">
         <div>
             <h1 id="tituloProjetos">Projetos</h1>
         </div>
@@ -118,4 +134,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
