--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
         href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 </head>
 
+
+
 <body>
+    <img src="data:," alt="imagem decorativa das habilidades" id="imagemFundoHabilidades" />
+    <div class="topo">
+        <nav class="navegacao">
+            <a href="#home">Home</a>
+            <a href="#habilidades">Habilidade</a>
+            <a href="#projetos">Projetos</a>
+        </nav>
+        <button id="themeButton">Dark Mode</button>
+    </div>
     <div class="inicioImagem" id="home">
         <div class="imagemDeFundo">
             <img src="./assets/carl-hodgson-vaporwaave-beder-project-2.jpg" alt="" id="imagemVaporwave">
@@ -24,14 +35,7 @@
 
             </div>
         </div>
-        <div class="topo">
-            <nav class="navegacao">
-                <a href="#home">Home</a>
-                <a href="#habilidades">Habilidade</a>
-                <a href="#projetos">Projetos</a>
-            </nav>
-            <button id="themeButton">Dark Mode</button>
-        </div>
+
         <div class="desfoco">
             <div class="comeco">
                 <div class="apresentacao">
@@ -42,19 +46,13 @@
                     </div>
                     <div class="escritoApresentacao">
                         <h1>Gabriel Plautz Eugenio</h1>
-                        <h4>Desenvolvedor Front-end Júnior</h4>
+                        <h4>Desenvolvedor Front-End</h4>
                         <p id="descricao">
-                            <!-- Desenvolvedor Júnior há 1 ano. Procuro minha primeira oportunidade de emprego.
-                            Minhas habilidades foram desenvolvidas principalmente em cursos, bootcamps e em projetos pessoais no meu GitHub. Habilidades como HTML, CSS, JavaScript, ReactJs, PostgreSQL, NodeJs, SQL, Java, JUnit e SpringBoot.
-                            <br> Meus principais projetos e portfólio estão no meu <a href="https://github.com/Xacarami" target="_blank">GitHub: https://github.com/Xacarami</a>
-                            <br>Como um bootcamp é um conjunto de cursos, projetos e desafios de códigos, para melhor detalhamento do que aprendi poderá ser encontrado no meu <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">LinkedIn</a> na área de "Licenças e Certificados": <a href="https://linkedin.com/in/gabriel-plautz" target="_blank">https://linkedin.com/in/gabriel-plautz</a> -->
                             Desenvolvo projetos, principalmente em JavaScript e ReactJs. Meus conhecimentos são
                             geralmente
                             adquiridos em Bootcamps, cursos, projetos pessoais e apps de ensino focado em linguagens.
-                            Gosto
-                            de tecnologia e lógica, o que me fez ir atrás de conhecimento por mim mesmo, me tornando uma
-                            pessoa autodidata. Atualmente estou aprimorando meus conhecimentos em PHP, UX-UI, Linux e
-                            Laravel. Gosto também de jogos, filmes, séries, e desafios de lógica.
+                            Atualmente estou aprimorando meus conhecimentos em PHP, UX-UI, Linux e
+                            Laravel.
                         </p>
                     </div>
                 </div>
@@ -74,48 +72,52 @@
 
     <hr>
 
-    <div class="habilidade" id="habilidades">
-        <div class="tituloSubtituloHabilidade">
-            <h1>Habilidades adquiridas</h1>
-            <p>Habilidades e tecnologias aprendidas em bootcamps, cursos, desafios de código e projetos.</p>
-        </div>
+    <div class="telaHabilidades">
 
-        <div class="campoHabilidade">
-            <div class="iconesHabilidades">
-                <button id="html">
-                    <img src="./assets/html.png" alt="HTML">
-                    <h2>HTML</h2>
-                </button>
-                <button id="css">
-                    <img src="./assets/css.png" alt="css">
-                    <h2>CSS</h2>
-                </button>
-                <button id="javascript">
-                    <img src="./assets/javascript.png" alt="javascript">
-                    <h2>JavaScript</h2>
-                </button>
-                <button id="react">
-                    <img src="./assets/react.png" alt="react">
-                    <h2>React</h2>
-                </button>
-                <button id="nodejs">
-                    <img src="./assets/nodejs.png" alt="nodejs">
-                    <h2>NodeJS</h2>
-                </button>
-                <button id="postgresql">
-                    <img src="./assets/postgresql.png" alt="postgresql">
-                    <h2>PostgreSQL</h2>
-                </button>
-                <button id="sql">
-                    <img src="./assets/sql.png" alt="sql">
-                    <h2>SQL</h2>
-                </button>
+
+        <div class="habilidade" id="habilidades">
+            <div class="tituloSubtituloHabilidade">
+                <h1>Habilidades adquiridas</h1>
+                <p>Habilidades e tecnologias aprendidas em bootcamps, cursos, desafios de código e projetos.</p>
             </div>
-            <div class="descricaoHabilidade">
-                <div class="infoHabilidade">
-                    <h3 id="tituloHabilidade">XXXXXXXXXX</h3>
-                    <hr>
-                    <p id="descricaoHabilidadeEscrito">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+
+            <div class="campoHabilidade">
+                <div class="iconesHabilidades">
+                    <button id="html">
+                        <img src="./assets/html.png" alt="HTML">
+                        <h2>HTML</h2>
+                    </button>
+                    <button id="css">
+                        <img src="./assets/css.png" alt="css">
+                        <h2>CSS</h2>
+                    </button>
+                    <button id="javascript">
+                        <img src="./assets/javascript.png" alt="javascript">
+                        <h2>JavaScript</h2>
+                    </button>
+                    <button id="react">
+                        <img src="./assets/react.png" alt="react">
+                        <h2>React</h2>
+                    </button>
+                    <button id="nodejs">
+                        <img src="./assets/nodejs.png" alt="nodejs">
+                        <h2>NodeJS</h2>
+                    </button>
+                    <button id="postgresql">
+                        <img src="./assets/postgresql.png" alt="postgresql">
+                        <h2>PostgreSQL</h2>
+                    </button>
+                    <button id="sql">
+                        <img src="./assets/sql.png" alt="sql">
+                        <h2>SQL</h2>
+                    </button>
+                </div>
+                <div class="descricaoHabilidade">
+                    <div class="infoHabilidade">
+                        <h3 id="tituloHabilidade">XXXXXXXXXX</h3>
+                        <hr>
+                        <p id="descricaoHabilidadeEscrito">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -128,7 +130,22 @@
             <h1 id="tituloProjetos">Projetos</h1>
         </div>
         <div class="campoProjetos">
-
+            <div class="cadaProjeto">
+                <a href="https://github.com/Xacarami/Carrefour-API-Localizacao" target="_blank">
+                    <h2>Carrefour-API-Localizacao</h2>
+                    <img alt="projeto do Carrefour usando APIs" src="assets/projetos/projeto carrefour .png" />
+                </a>
+                <p>Feito em React, consome a API disponibilizada pelo Carrefour para criar um e-commerce, e também uma
+                    API para localizações de mercados mais próximos</p>
+            </div>
+            <div class="cadaProjeto">
+                <a href="#">
+                    <h2>Carrefour-API-Localizacao</h2>
+                    <img alt="projeto do Carrefour usando APIs" src="assets/projetos/projeto carrefour .png" />
+                </a>
+                <p>Feito em React, consome a API disponibilizada pelo Carrefour para criar um e-commerce, e também uma
+                    API para localizações de mercados mais próximos</p>
+            </div>
         </div>
     </div>
 
