melhora do design dos projetos

--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@
                 <p>Feito em React, consome a API disponibilizada pelo Carrefour para criar um e-commerce, e também uma
                     API para localizações de mercados mais próximos</p>
             </div>
+            <div class="cadaProjeto">
+                <a href="#">
+                    <h2>Carrefour-API-Localizacao</h2>
+                    <img alt="projeto do Carrefour usando APIs" src="assets/projetos/projeto carrefour .png" />
+                </a>
+                <p>Feito em React, consome a API disponibilizada pelo Carrefour para criar um e-commerce, e também uma
+                    API para localizações de mercados mais próximos</p>
+            </div>
         </div>
     </div>
 
